package palaceProtos;

option java_package = "com.kegelapps.palace.protos";
option java_outer_classname = "InPlayProtos";
import "Card.proto";

message InPlayView {
    repeated CardView cards = 1;
    optional float x = 2;
    optional float y = 3;
}